--- a/vetclinic/pom.xml
+++ b/vetclinic/pom.xml
@@ -62,6 +62,20 @@
             <version>2.7.0</version>
         </dependency>
 
+
+
+            <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
+
+        
+
     </dependencies>
 
     <build>
