--- a/vetclinic/src/main/resources/application.properties
+++ b/vetclinic/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/s3_db_lab_6?createDatabaseIfNotExist=true&useUnicode=true&serverTimezone=UTC
-spring.datasource.username=user
-spring.datasource.password=pass
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driverclassname=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port = 8090
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.health.show-details=always
+management.metrics.tags.application=Application
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
