--- a/vetclinic/src/main/resources/application-prod.properties
+++ b/vetclinic/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/s3_db_lab_6?createDatabaseIfNotExist=true&useUnicode=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://cloud-lab-1-database.chov87qbwh0h.eu-central-1.rds.amazonaws.com:3306/s3_db_lab_6?createDatabaseIfNotExist=true&useUnicode=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootroot
 spring.datasource.driverclassname=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
